# prompt-injection-detector

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
docs/changelog/: CHANGELOG.md
docs/flow/: system_flow.md
docs/reports/: code_review_2026-04-25.md  security_report_2026-04-25.md  test_report_2026-04-25.md
docs/workflow/: workflow.md
scripts/: build_dataset.py  download_data.sh  train.py
src/: api.py  classifier.py  data_loader.py  detector.py  embedder.py  rule_engine.py  schema.py
tests/: conftest.py
tests/integration/: test_api.py  test_detector.py
tests/security/: test_security_audits.py
tests/unit/: test_classifier.py  test_data_loader.py  test_rule_engine.py  test_schema.py
