[project]
name = "prompt-injection-detector"
version = "0.0.1"
description = "Embedding-based detector for prompt injection attacks against LLMs"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Gary" },
]
dependencies = [
    "sentence-transformers>=2.5.0",
    "scikit-learn>=1.3.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.0.0",
    "numpy>=1.24.0,<2.0.0",
    "pandas>=2.0.0",
    "datasets>=2.14.0",
    "huggingface-hub>=0.20.0",
    "einops>=0.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.26.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.13.0",
    "scikit-plot>=0.3.7",
    "jupyter>=1.0.0",
    "ipykernel>=6.28.0",
]
security = [
    "pip-audit>=2.7.0",
    "bandit>=1.7.0",
    "detect-secrets>=1.4.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html",
]
markers = [
    "unit: unit tests",
    "integration: integration tests",
    "stress: stress / performance tests",
    "e2e: end-to-end tests",
    "security: security tests",
    "slow: slow tests (skip with -m 'not slow')",
]
